# routing-algorithms

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md
Teste/RoutingAlgorithms-branchTeste/: CMakeLists.txt
Teste/RoutingAlgorithms-branchTeste/include/: distance_vector.h  graph.h  hosts.h  ip.h  package.h
Teste/RoutingAlgorithms-branchTeste/src/components/: hosts.c  router.c
Teste/RoutingAlgorithms-branchTeste/src/main/: main.c
Teste/RoutingAlgorithms-branchTeste/src/routing/: distance_vector.c  link_state.c
data/: graph.data
docs/: motivacao_leoni.md
include/: distance_vector.h  graph.h  hosts.h  ip.h  link_state.h  package.h  router.h
src/components/: hosts.c  ip.c  package.c  router.c
src/graph/: graph.c  graph_1.txt
src/interface/: ncurses_interface.c
src/main/: a.out  main.c
src/routing/: distance_vector.c  link_state.c
